# Sentiment-analyzer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
artifacts/: inference.py  sentiment_model.joblib
tests/: test_inference.py
