[project]
name = "sentiment-inference"
version = "0.1.0"
description = "Production-grade sentiment analysis FastAPI app"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "torch",
  "transformers",
  "joblib",
  "cloudpickle",
  "clean-text",
  "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "httpx"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
