[project]
name = "sentiment-inference"
version = "0.1.0"
description = "Production-grade sentiment analysis FastAPI app"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "torch==2.1.2",
  "transformers==4.38.2",
  "numpy == 1.26.4",
  "joblib",
  "cloudpickle",
  "clean-text",
  "scikit-learn",
  "unidecode",
  "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy",
  "ruff",
  "httpx",
  "types-joblib",
  "types-requests",
  "pre-commit"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
